--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hardhat": "^2.19.4"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "hardhat-gas-reporter": "^1.0.9"
   }
 }
